# ModernLibre

./: docker-compose.yml  package-lock.json
api/: libre-book.yaml  libre-user.yaml
key/: private_key.pem  public_key.pem
service/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  diesel.toml
service/libre-book/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configmap-dev.yaml  diesel.toml  docker-compose.yml  init.sql
service/libre-book/migrations/2024-12-08-110456_create_books/: up.sql
service/libre-book/src/: error.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  util.rs
service/libre-book/src/controller/: mod.rs  test.rs  user_controller.rs
service/libre-book/src/controller/v1/book/: download.rs  file.rs  list.rs  mod.rs  upload.rs
service/libre-book/src/database/: schema.rs
service/libre-book/src/extractor/: epub.rs  mod.rs  pdf.rs
service/libre-book/src/s3/: local.rs  mod.rs  presigned.rs
service/libre-book/tests/: integration_tests.rs
service/libre-core/: Cargo.toml  README.md
service/libre-core/src/: environment.rs  lib.rs
service/libre-core/src/database/: postgres.rs  redis.rs
service/libre-core/src/jsonwebtoken/: init.rs  mod.rs
service/libre-file/: Cargo.toml
service/libre-file/src/: main.rs
service/libre-file/src/controller/v1/file/: mod.rs
service/libre-user/: .env  Cargo.toml  README.md  TODO  diesel.toml
service/libre-user/migrations/2024-12-10-024942_create_users/: up.sql
service/libre-user/src/: env.rs  lib.rs  main.rs  schema.rs
service/libre-user/src/controller/: mod.rs  signin.rs  users.rs
service/libre-user/src/models/: mod.rs
service/libre-user/src/oauth/: casdoor.rs  error.rs  github.rs  mod.rs
service/migrations/2024-12-08-110456_create_books/: up.sql
service/migrations/2024-12-10-052902_create_categories/: up.sql
service/migrations/2024-12-10-064504_init-db/: down.sql  up.sql
templates/: default.conf.template
web/: .env.development  Dockerfile  next.config.ts  package-lock.json  package.json
web/app/api/auth/casdoor/: page.tsx
web/app/api/auth/github/: page.tsx
web/app/api/callback/casdoor/: page.tsx
web/app/api/callback/github/: page.tsx
web/app/callback/casdoor/: page.tsx
web/app/callback/github/: page.tsx
web/app/home/: page.tsx
web/app/login/: page.tsx
web/app/profile/: page.tsx
web/app/reader/: page.tsx
web/components/: auth-provider.tsx  book-grid.tsx  user-menu.tsx
web/hooks/: use-book.ts  use-url.ts
web/lib/: api.ts
