[package]
name = "libre-book"
version = "0.1.0"
edition = "2021"

[dependencies]
libre-core = { path = "../libre-core" }
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2", features = ["uuid", "chrono"] }
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }
derive_more = "0.99.17"
chrono = { version = "0.4", features = ["serde"] }
actix-multipart = "0.7.2"
epub = "2.1.2"
jsonwebtoken = "8"
actix-web-httpauth = "0.6"
actix-cors = "0.6"
casdoor-rust-sdk = "1.3.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
r2d2 = "0.8.10"

aws-config = "1.5.9"
aws-sdk-s3 = { version = "1.59.0", features = ["http-1x"] }
aws-smithy-runtime-api = "1.7.2"
file-format = "0.26.0"

[dev-dependencies]
actix-rt = "2.5"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
