[package]
name = "libre-core"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rsa = "0.9.7"
rand = "0.8.5"

redis = { version = "0.27.6", features = ["tokio-comp", "aio"] }
diesel = { version = "2.1.0", features = ["uuid", "chrono"] }
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }

actix-rt = "2.4.0"
actix-web = "4.9.0" 
actix-web-httpauth = "0.6"
lazy_static = "1.5.0"
