[package]
name = "libre-user"
version = "0.1.0"
edition = "2021"

[dependencies]
libre-core = { path = "../libre-core" }
actix-web = { version = "4.9.0", features = [] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["uuid", "chrono"] }
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }
derive_more = "0.99.17"
chrono = { version = "0.4", features = ["serde"] }
actix-multipart = "0.7.2"
actix-web-httpauth = "0.6"
actix-cors = "0.6"
casdoor-rust-sdk = "1.3.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
r2d2 = "0.8.10"
redis = { version = "0.27.6", features = ["tokio-comp", "aio", "r2d2"] }
rsa = "0.9.7"
rand = "0.8.5"
oauth2 = "5.0.0-rc.1"
url = "2.5.4"
anyhow = "1.0.94"
reqwest = { version = "0.12.9", features = ["json"] }
derive_builder = "0.20.2"
[dev-dependencies]
actix-rt = "2.5"

[dependencies.uuid]
version = "1.11.0"
features = [
    "serde",             # Enable serialization/deserialization of UUIDs
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
